--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "@typescript-eslint/typescript-estree": "^5.43.0",
+    "babel-plugin-react-native-web": "^0.18.10",
     "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
@@ -24,6 +25,10 @@
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "react-dom": "^18.2.0",
+    "react-native-web": "^0.18.10"
   }
 }
