--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
+    "@types/leveldown": "^4.0.3",
+    "@types/levelup": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "@typescript-eslint/typescript-estree": "^5.43.0",
     "babel-plugin-react-native-web": "^0.18.10",
+    "better-sqlite3": "^8.0.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
@@ -25,9 +28,13 @@
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "level": "^8.0.0",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.18.10"
   }
