--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dev": "tsnd --respawn src/index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.2",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "@typescript-eslint/typescript-estree": "^5.43.0",
@@ -29,12 +31,18 @@
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "supertest": "^6.3.1",
+    "@types/supertest": "^2.0.12"
   },
   "dependencies": {
+    "pino": "^8.7.0",
+    "cors": "^2.8.5",
     "level": "^8.0.0",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
+    "pino-http": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.18.10"
   }
